--- a/style/style.css
+++ b/style/style.css
@@ -166,8 +166,8 @@ body {
   transition: all 0.5s;
 }
 .button:hover {
-  background-color: #196843;
-  border-color: #262f38;
+  background-color: #04c2c9;
+  border-color: #04c2c9;
 }
 .button .mdi {
   vertical-align: middle;
@@ -199,27 +199,32 @@ body {
 }
 
 .hexagon {
-  background: #196843;
-  width: 80px;
-  height: 80px;
-  position: relative;
-  text-align: center;
+  background-color: #04c2c9;
+  display: inline-block;
+  height: 100%;
+  width: 57.735%;
 }
-.hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 80px;
-  width: 80px;
-  background: #196843;
-}
+
 .hexagon:before {
-  transform: rotate(30deg);
+  background-color: inherit;
+  content: "";
+  height: inherit;
+  position: absolute;
+  right: 21.1325%;
+  top: 0;
+  transform: rotateZ(60deg);
+  width: inherit;
 }
+
 .hexagon:after {
-  transform: rotate(60deg);
+  background-color: inherit;
+  content: "";
+  height: inherit;
+  position: absolute;
+  right: 21.1325%;
+  top: 0;
+  transform: rotateZ(-60deg);
+  width: inherit;
 }
 
 .highlight {
@@ -256,7 +261,7 @@ nav {
   left: 0;
   position: absolute;
   background: #1b242f;
-  border-bottom: 3px solid #196843;
+  border-bottom: 3px solid #04c2c9;
   height: 50px;
   text-align: left;
   width: 100%;
@@ -284,15 +289,15 @@ nav .link-wrap {
 nav .link-wrap.visible {
   height: 220px;
 }
+nav .link-wrap div:first-child {
+  padding: 25px 20px 12px 20px;
+}
 nav .link-wrap div {
   cursor: pointer;
   font-size: 12pt;
   padding: 12px 20px;
   text-transform: uppercase;
   transition: color 0.5s;
-}
-nav .link-wrap div:first-child {
-  padding: 25px 20px 12px 20px;
 }
 nav .link-wrap div:hover {
   color: #196843;
@@ -306,7 +311,7 @@ nav .mdi-menu {
   top: 0;
 }
 nav .active {
-  color: #23a568;
+  color: #196843;
 }
 
 .carousel-wrap {
@@ -431,7 +436,7 @@ nav .active {
   position: relative;
 }
 .modal-wrap .button {
-  background: #23a568;
+  background: #196843;
   border: 0;
   bottom: 20px;
   color: #fff;
@@ -451,7 +456,7 @@ nav .active {
 }
 .modal-wrap .button:hover {
   background: #fff;
-  color: #23a568;
+  color: #196843;
 }
 .modal-wrap .carousel {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.25);
@@ -524,7 +529,7 @@ section:nth-of-type(2) .bullet-wrap {
   padding: 0 7px;
 }
 section:nth-of-type(2) .highlight {
-  color: #196843;
+  color: #009ada;
 }
 section:nth-of-type(2) .up-arrow {
   height: 30px;
@@ -551,7 +556,7 @@ section:nth-of-type(2) .hexagon i {
 }
 section:nth-of-type(2) .bars-wrap {
   margin: 50px auto 0 auto;
-  max-width: 90%;
+  max-width: 80%;
   width: calc(100% - 15px);
 }
 section:nth-of-type(2) .bars-wrap:not(.animated) .fill {
@@ -593,6 +598,9 @@ section:nth-of-type(2) .bar:nth-child(8) .fill {
 section:nth-of-type(2) .bar:nth-child(9) .fill {
   transition: 1.9s 0.2s width ease-in-out;
 }
+section:nth-of-type(2) .bar:nth-child(10) .fill {
+  transition: 2s 0.2s width ease-in-out;
+}
 section:nth-of-type(2) .bar span {
   display: none;
 }
@@ -600,7 +608,7 @@ section:nth-of-type(2) .bar.fill {
   left: 0;
   position: absolute;
   top: 0;
-  background-color: #285540;
+  background-color: #00a1a7;
   opacity: 1;
   padding: 0;
 }
@@ -608,7 +616,7 @@ section:nth-of-type(2) .bar .tag {
   left: 0;
   position: absolute;
   top: 0;
-  background-color: #196843;
+  background-color: #04c2c9;
   color: #fff;
   height: 100%;
   width: 110px;
@@ -720,6 +728,30 @@ section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
 section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
   background: url("../img/thumb-4.jpg") center center/cover;
 }
+section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
+  background: url("../img/thumb-5.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
+  background: url("../img/thumb-6.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(7) .card {
+  background: url("../img/thumb-7.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(8) .card {
+  background: url("../img/thumb-8.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(9) .card {
+  background: url("../img/thumb-9.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(10) .card {
+  background: url("../img/thumb-10.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(11) .card {
+  background: url("../img/thumb-11.jpg") center center/cover;
+}
+section:nth-of-type(3) #gallery .mix:nth-child(12) .card {
+  background: url("../img/thumb-12.jpg") center center/cover;
+}
 section:nth-of-type(3) #gallery .mix .card {
   height: 240px;
   max-width: 100%;
@@ -742,95 +774,34 @@ section .flex-50-gt-sm {
   display: block;
 }
 section:nth-of-type(4) {
-  padding: 130px 0 100px 0;
-  text-align: left;
-}
-section:nth-of-type(4) .flex.row-gt-sm,
-section:nth-of-type(4) .flex.wrap {
-  align-items: flex-start;
-}
-section:nth-of-type(4) .gradient {
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-section:nth-of-type(4) .blog-wrap {
-  cursor: pointer;
-  margin: 0 0 50px 0;
-  padding: 0 2px;
-  width: 100%;
-}
-section:nth-of-type(4) .blog-wrap #thumb-1 {
-  background: url("../img/blog-1.jpg") center center/cover;
-}
-section:nth-of-type(4) .blog-wrap #thumb-2 {
-  background: url("../img/blog-2.jpg") center center/cover;
-}
-section:nth-of-type(4) .blog-wrap .fade-wrap {
-  transition: opacity 0.3s;
-}
-section:nth-of-type(4) .blog-wrap.fade .fade-wrap {
-  opacity: 0.4;
-}
-section:nth-of-type(4) .blog-wrap.hover .fade-wrap .label {
-  color: #04c2c9;
-}
-section:nth-of-type(4) .label {
-  font-size: 12pt;
-  line-height: 14pt;
-  transition: color 0.3s ease-in-out;
-}
-section:nth-of-type(4) .thumb {
-  height: 150px;
-  margin: 0 0 15px 0;
-}
-section:nth-of-type(4) .date {
-  font-family: "Open sans";
-  font-size: 7pt;
-  margin: 5px 0 0 0;
-}
-section:nth-of-type(4) .bar {
-  background: #176c44;
-  height: 3px;
-  margin: 10px 0px;
-  width: 25%;
-}
-section:nth-of-type(4) .text {
-  font-size: 9pt;
-  line-height: 13pt;
-  max-height: 85px;
-}
-#contact {
   background: #252934;
   color: #fff;
   padding-top: 175px;
 }
-#contact .header {
+section:nth-of-type(4) .header {
   color: #fff;
 }
-#contact .header-bar {
+section:nth-of-type(4) .header-bar {
   background: #fff;
   margin: 25px 0 40px 0;
   width: 110px;
 }
-#contact .highlight {
-  color: #23a568;
+section:nth-of-type(4) .highlight {
+  color: #04c2c9;
   font-weight: 600;
 }
-#contact svg {
+section:nth-of-type(4) svg {
   left: 0;
   position: absolute;
   top: 0;
 }
-#contact form {
+section:nth-of-type(4) form {
   margin: 40px auto 0 auto;
   min-width: 95%;
 }
-#contact input[type="text"],
-#contact input[type="email"],
-#contact textarea {
+section:nth-of-type(4) input[type=text],
+section:nth-of-type(4) input[type=email],
+section:nth-of-type(4) textarea {
   background: #1e242c;
   border: 0;
   box-sizing: border-box;
@@ -842,11 +813,11 @@ section:nth-of-type(4) .text {
   padding: 10px 15px;
   width: 100%;
 }
-#contact textarea {
+section:nth-of-type(4) textarea {
   margin-bottom: 5px;
   min-height: 150px;
 }
-#contact .button {
+section:nth-of-type(4) .button {
   background: transparent;
   color: #fff;
   float: right;
@@ -855,28 +826,28 @@ section:nth-of-type(4) .text {
   outline: 0;
   padding: 10px 30px;
 }
-#contact .button:hover {
-  background: #176c44;
+section:nth-of-type(4) .button:hover {
+  background: #04c2c9;
 }
-#contact #success {
+section:nth-of-type(4) #success {
   height: 0;
   overflow: hidden;
   position: relative;
   transition: height 0.25s;
   width: 100%;
 }
-#contact #success.expand {
+section:nth-of-type(4) #success.expand {
   height: 36px;
 }
-#contact #success div {
-  background: #176c44;
+section:nth-of-type(4) #success div {
+  background: #04c986;
   border: 1px solid #157c59;
   color: #157051;
   font-size: 10pt;
   font-weight: 600;
   padding: 5px 0;
 }
-#contact #close {
+section:nth-of-type(4) #close {
   cursor: pointer;
   font-size: 12pt;
   font-weight: 600;
@@ -891,7 +862,7 @@ footer {
   position: relative;
 }
 footer .mdi-chevron-double-up {
-  background: #176c44;
+  background: #196843;
   cursor: pointer;
   font-size: 30pt;
   height: 50px;
@@ -905,7 +876,7 @@ footer .mdi-chevron-double-up {
   width: 47px;
 }
 footer .mdi-chevron-double-up:hover {
-  background: #23a568;
+  background: #196843;
 }
 footer .icon-wrap .icon {
   background: #262f38;
@@ -923,8 +894,11 @@ footer .icon-wrap .mdi {
   color: #fff;
   text-align: center;
 }
+footer .icon-wrap .mdi.mdi-codepen {
+  font-size: 20pt;
+}
 footer .icon-wrap .icon:hover {
-  background: #23a568;
+  background: #04c2c9;
   box-shadow: 0 0 0 3px rgba(4, 94, 201, 0.1);
   transform: scale(0.9);
 }
@@ -943,7 +917,7 @@ footer .footnote {
   opacity: 0.6;
 }
 footer .footnote .highlight {
-  color: #156842;
+  color: #196843;
   font-family: "Open Sans";
 }
 
@@ -956,38 +930,30 @@ footer .footnote .highlight {
   body {
     font-size: 12pt;
   }
-
   .container {
     padding: 0 20px;
   }
-
   .header {
     font-size: 30pt;
   }
-
   .header-bar {
     margin: 25px 0 100px 0;
   }
-
   .label {
     font-size: 18pt;
   }
-
   .hex-wrap {
     height: 100px;
     width: 100px;
   }
-
   .slide,
   .carousel-wrap {
     height: 450px;
   }
-
   .mdi-chevron-left,
   .mdi-chevron-right {
     font-size: 25pt !important;
   }
-
   .modal-wrap .modal {
     height: initial;
     top: -6vh;
@@ -1013,7 +979,6 @@ footer .footnote .highlight {
   .modal-wrap .button {
     left: 25px;
   }
-
   nav .link-wrap {
     background: none;
     height: initial;
@@ -1024,19 +989,18 @@ footer .footnote .highlight {
   nav .link-wrap .visible {
     height: initial;
   }
+  nav .link-wrap div:first-child {
+    padding: 0;
+  }
   nav .link-wrap div {
     display: inline;
     font-size: initial;
     margin: 0 20px;
     padding: initial;
   }
-  nav .link-wrap div:first-child {
-    padding: 0;
-  }
   nav .mdi-menu {
     display: none;
   }
-
   section {
     line-height: 18pt;
     padding: 100px 0 130px 0;
@@ -1094,30 +1058,7 @@ footer .footnote .highlight {
   section:nth-of-type(3) #gallery .mix .card {
     height: 300px;
   }
-  section:nth-of-type(4) {
-    padding: 130px 0 180px 0;
-  }
-  section:nth-of-type(4) .label {
-    font-size: 16pt;
-    line-height: 22pt;
-  }
-  section:nth-of-type(4) .date {
-    font-size: 8.5pt;
-  }
-  section:nth-of-type(4) .bar {
-    margin: 15px 0px;
-  }
-  section:nth-of-type(4) .text {
-    font-size: 11pt;
-    line-height: 15pt;
-  }
-  section:nth-of-type(4) .blog-wrap {
-    width: 400px;
-  }
-  section:nth-of-type(4) .thumb {
-    height: 200px;
-  }
-  #contact form {
+  section:nth-of-type(4) form {
     min-width: 500px;
   }
 }
@@ -1125,7 +1066,6 @@ footer .footnote .highlight {
   .waypoint {
     opacity: 0;
   }
-
   .animated.waypoint#gallery {
     opacity: 1;
   }
@@ -1143,6 +1083,26 @@ footer .footnote .highlight {
   }
   .animated.waypoint#gallery .mix:nth-child(4) > div {
     animation: slideUp 0.75s 0.4s ease both;
+    opacity: 0;
+  }
+  .animated.waypoint#gallery .mix:nth-child(5) > div {
+    animation: slideUp 0.75s 0.5s ease both;
+    opacity: 0;
+  }
+  .animated.waypoint#gallery .mix:nth-child(6) > div {
+    animation: slideUp 0.75s 0.6s ease both;
+    opacity: 0;
+  }
+  .animated.waypoint#gallery .mix:nth-child(7) > div {
+    animation: slideUp 0.75s 0.7s ease both;
+    opacity: 0;
+  }
+  .animated.waypoint#gallery .mix:nth-child(8) > div {
+    animation: slideUp 0.75s 0.8s ease both;
+    opacity: 0;
+  }
+  .animated.waypoint#gallery .mix:nth-child(9) > div {
+    animation: slideUp 0.75s 0.9s ease both;
     opacity: 0;
   }
   .animated.slide-up {
@@ -1166,19 +1126,15 @@ footer .footnote .highlight {
   .animated.pop-in {
     animation: popIn 1s both;
   }
-
   .canvas {
     background: #252934;
   }
-
   .button {
     font-size: 16pt;
   }
-
   .flex.row-gt-sm {
     flex-direction: row;
   }
-
   .flex-50-gt-sm {
     box-sizing: border-box;
     -webkit-flex: 1 1 50%;
@@ -1187,7 +1143,6 @@ footer .footnote .highlight {
     max-height: 100%;
     max-width: 50%;
   }
-
   section:nth-of-type(2) .bars-wrap {
     margin: 0 0 0 0;
   }
@@ -1212,17 +1167,6 @@ footer .footnote .highlight {
     font-size: 13pt;
     margin: 0 25px;
     padding: 0 40px;
-  }
-  section:nth-of-type(4) .blog-wrap {
-    margin: 0 0 50px 20px;
-    opacity: 0;
-    width: 400px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  section:nth-of-type(4) .blog-wrap {
-    margin: 0 0 50px 20px;
-    width: 270px;
   }
 }
 
